message Test {
    optional uint32 x = 1;
    optional fixed64 y = 2;
    optional bytes z = 3;
    optional Test child1 = 4;
    optional group Child2 = 5 {
        optional sint64 x = 1;
        optional Test recursive = 2;
    }

    message NestedMessage {
        optional sint64 x = 1;
        optional Test recursive = 2;
    }
    repeated NestedMessage nested_message = 6;
}


